# origametry

./: .coveragerc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
docs/source/usage/: folding.rst  index.rst  lines.rst  points.rst  showing.rst
examples/: addition.py
src/: constants.py  fold.py  helpers.py  line.py  reflect.py
src/origametry/: __init__.py  fold.py  helpers.py  line.py  point.py  show.py
tests/: fold_test.py  helpers_test.py  line_test.py  point_test.py  reflect_test.py  show_test.py
